--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path=""/>
-	<classpathentry kind="output" path=""/>
+	<classpathentry kind="src" path="swexpert"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
