--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="swexpert"/>
 	<classpathentry kind="src" path="programmers"/>
+	<classpathentry kind="src" path="baekjoon"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
