--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,13 +1,4 @@
-/d1_2072/
-/d2_1859/
-/d2_1926/
-/d2_21425/
-/d3_1289/
-/d3_24524/
-/d3_5215/
-/d4_7733/
-/d5_19118/
-/d5_24002/
-/s3_14501/
-/s3_2559/
-/모의고사/
+/algorithm/
+/g5_15686/
+/s2_1260/
+/s2_1012/
