--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="src" path="programmers"/>
 	<classpathentry kind="src" path="baekjoon"/>
 	<classpathentry kind="src" path="basic-algorithm"/>
+	<classpathentry kind="src" path="solving"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
