--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="src" path="baekjoon"/>
 	<classpathentry kind="src" path="basic-algorithm"/>
 	<classpathentry kind="src" path="solving"/>
+	<classpathentry kind="src" path="LeetCode"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
