--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="src" path="basic-algorithm"/>
 	<classpathentry kind="src" path="solving"/>
 	<classpathentry kind="src" path="LeetCode"/>
+	<classpathentry kind="src" path="ready"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
