--- a/.classpath
+++ b/.classpath
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" path="swexpert"/>
-	<classpathentry kind="src" path="programmers"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="baekjoon"/>
 	<classpathentry kind="src" path="basic-algorithm"/>
-	<classpathentry kind="src" path="solving"/>
 	<classpathentry kind="src" path="LeetCode"/>
-	<classpathentry kind="src" path="ready"/>
 	<classpathentry kind="src" path="original"/>
+	<classpathentry excluding="PCCP/실습용로봇/|PCCP/카페확장/" kind="src" path="programmers"/>
+	<classpathentry kind="src" path="programmers/PCCP/실습용로봇"/>
+	<classpathentry kind="src" path="programmers/PCCP/카페확장"/>
+	<classpathentry kind="src" path="ready"/>
+	<classpathentry kind="src" path="solving"/>
+	<classpathentry kind="src" path="swexpert"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
